<resources>
    <string name="app_name">My_Quiz</string>
    <string name="question1">Yes or No (No is correct answer)</string>
    <string name="question2">Yes or No (Yes is correct answer)</string>
    <string name="yes">yes</string>a
    <string name="no">no</string>
    <string name="is_the_car_red">Is the car red?</string>
    <string name="image">image</string>
    <string name="third_question">Enter your answer here(yes/no)    </string>
    <string name="submit">submit</string>
    <string name="play_again">play again</string>
    <string name="question_5">This car is</string>
    <string name="red_color">Red</string>
    <string name="yellow_color">Yellow</string>
</resources>