<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdQuestionActivity">

    <TextView
        android:id="@+id/question_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/is_the_car_red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/car_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:src="@drawable/images"
        app:layout_constraintBottom_toTopOf="@+id/question_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        app:layout_constraintBottom_toTopOf="@+id/btn_no" />
</androidx.constraintlayout.widget.ConstraintLayout>